       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. Document.cookie= does not restrict the cookie by path and domain


Revision History:
18-Dec-2001
Acknowledgements:
    Thanks to Bernhard Wagner for simplifying some string comparison code in ParsedHTML and WebTable

18-Dec-2002 1.5.1

Acknowledgements:
    Thanks to Geert Bevin for fixing a problem with comparing cookies
    Thanks to Troy Waldrep for pointing out the non-standard Refresh header definition accepted in popular browsers
    Thanks to Raul Benito Garcia for pointing out the problem with no-action forms accessed with URL parameters
    Thanks to Larry Hamel for supplying an ant target to run Example.java
    Thanks to Charles Mendis for finding the bug in the proxy support
    Thanks to Michael McCallum for adding handling for bad character-set headers and an ant target to build the examples
    Thanks to Neville Wylie for catching the top.parent and frame name index problems

Problems Fixed:
    Content and Parsing
        1. Adding both a "global" cookie and a server-based cookie with the same name caused a NullPointerException
        2. Simply removing the NekoHTML parser jar from the classpath was not enough to re-enable JTidy. Now it is.
        3. When a form obtained using parameters as part of the URL has no action, those parameters are now sent
           as part of the form submission.
        4. Bug #635273 Proxy port always interpreted as port 80 due to typo
        5. As of 1.5, HttpUnit was not building if NekoHTML was not in the classpath. This is now fixed.
        6. Bad character-set headers from servers would result in an UnsupportedEncodingException.
        7. Bug #638406 Multi-line values in form data were using the platform-specific line ending rather than CRLF.